--- a/app/src/main/res/layout/exitnode_header_view.xml
+++ b/app/src/main/res/layout/exitnode_header_view.xml
@@ -32,6 +32,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:tint="#88C9F9"
                 android:layout_margin="5dp"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
@@ -77,7 +78,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:buttonTint="#FFFFFF"
+                style="@style/radio_button"
                 android:clickable="false" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.appcompat.widget.LinearLayoutCompat>
