--- a/app/src/main/res/layout-sw380dp/include_connection_stats.xml
+++ b/app/src/main/res/layout-sw380dp/include_connection_stats.xml
@@ -28,38 +28,16 @@
             android:id="@+id/cl_up_stat"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="52dp"
-            android:background="@drawable/round_down_stat_bg"
-            android:contentDescription="@string/up_content_description"
             android:paddingVertical="@dimen/stat_card_padding_vertical"
+            android:layout_marginTop="@dimen/stat_top_margin"
+            android:background="@drawable/round_down_stat_bg"
             android:visibility="@{viewModel.connectionState == ConnectionState.CONNECTED ? View.VISIBLE: View.GONE}"
+            android:contentDescription="@string/up"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed">
-
-            <ImageView
-                android:id="@+id/ic_up_traffic"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:importantForAccessibility="no"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_up_traffic"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/tv_up_label"
-                app:srcCompat="@drawable/ic_trend_up" />
-
-            <TextView
-                android:id="@+id/tv_up_label"
-                style="@style/label_in_stats"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/up"
-                app:layout_constraintBottom_toTopOf="@+id/tv_up_traffic"
-                app:layout_constraintStart_toStartOf="@+id/tv_up_traffic"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="packed" />
 
             <TextView
                 android:id="@+id/tv_up_traffic"
@@ -68,10 +46,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="4dp"
-                android:contentDescription="@{viewModel.dataUsageUpstream}"
-                android:ellipsize="end"
                 android:maxLines="1"
+                android:ellipsize="end"
                 android:text="@{viewModel.dataUsageUpstream}"
+                android:contentDescription="@{viewModel.dataUsageUpstream}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ic_up_traffic"
                 app:layout_constraintTop_toBottomOf="@+id/tv_up_label"
@@ -83,14 +61,36 @@
                 style="@style/stats_kbits_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginEnd="24dp"
                 android:background="@drawable/bg_rounded_secondary"
                 android:text="@{viewModel.dataUsageDiffUpstream}"
-                app:layout_constraintStart_toEndOf="@+id/ic_up_traffic"
-                app:layout_constraintTop_toBottomOf="@+id/tv_up_traffic"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_up_traffic"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/tv_up_label"
                 tools:text="2.12kbits" />
 
+            <ImageView
+                android:id="@+id/ic_up_traffic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_up_traffic"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/tv_up_label"
+                app:srcCompat="@drawable/ic_trend_up"
+                android:importantForAccessibility="no"
+                />
+
+            <TextView
+                android:id="@+id/tv_up_label"
+                style="@style/label_in_stats"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/up"
+                app:layout_constraintBottom_toTopOf="@+id/tv_up_traffic"
+                app:layout_constraintStart_toStartOf="@+id/tv_up_traffic"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -101,7 +101,7 @@
             android:layout_marginTop="4dp"
             android:background="@drawable/round_up_stat_bg"
             android:visibility="@{viewModel.connectionState == ConnectionState.CONNECTED ? View.VISIBLE: View.GONE}"
-            android:contentDescription="@string/down_content_description"
+            android:contentDescription="@string/down"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -130,11 +130,11 @@
                 android:background="@drawable/bg_rounded_tertiary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
                 android:text="@{viewModel.dataUsageDiffDownstream}"
-                app:layout_constraintTop_toBottomOf="@+id/tv_down_traffic"
-                app:layout_constraintStart_toEndOf="@+id/ic_down_traffic"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_down_traffic"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/tv_down_label"
                 tools:text="2.12kbits" />
 
             <ImageView
@@ -155,7 +155,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/down"
-                android:importantForAccessibility="no"
                 app:layout_constraintBottom_toTopOf="@+id/tv_down_traffic"
                 app:layout_constraintStart_toStartOf="@+id/tv_down_traffic"
                 app:layout_constraintTop_toTopOf="parent"
@@ -172,6 +171,7 @@
             android:background="@drawable/round_dialog_bg"
             android:onClick="@{() -> viewModel.appCardClicked()}"
             android:visibility="@{viewModel.appCardVisibility ? View.VISIBLE: View.GONE}"
+            android:contentDescription="@string/apps"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cl_down_stat">
@@ -208,7 +208,6 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="8dp"
                 android:text="@{viewModel.appProtectionLabel}"
-                android:contentDescription="@{viewModel.appProtectionLabel}"
                 tools:text="a very long string that completely overflows"
                 android:maxLines="2"
                 android:ellipsize="end"
