--- a/app/src/main/res/layout/fragment_connect.xml
+++ b/app/src/main/res/layout/fragment_connect.xml
@@ -120,17 +120,19 @@
             app:viewModel="@{viewModel}"
             tools:visibility="gone" />
 
-        <include
-            android:id="@+id/include_stats"
-            layout="@layout/include_connection_stats"
+        <ScrollView
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@+id/upper_guideline_action_btns"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            app:viewModel="@{viewModel}"
-            tools:visibility="visible" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar">
+            <include
+                android:id="@+id/include_stats"
+                layout="@layout/include_connection_stats"
+                app:viewModel="@{viewModel}"
+                tools:visibility="visible" />
+        </ScrollView>
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
