Apply 1 suggestion(s) to 1 file(s)
Co-authored-by: cyberta <cyberta@riseup.net>

--- a/app/src/main/res/layout/exitnode_item_view.xml
+++ b/app/src/main/res/layout/exitnode_item_view.xml
@@ -38,7 +38,7 @@
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toStartOf="@+id/rbSelected"
-          android:paddingHorizontal="@dimen/compact_padding"
+          android:paddingHorizontal="@dimen/default_padding"
           android:singleLine="true"
           android:ellipsize="end"
           android:labelFor="@+id/rbSelected"
