--- a/app/src/main/res/layout/include_connection_stats.xml
+++ b/app/src/main/res/layout/include_connection_stats.xml
@@ -28,13 +28,12 @@
             android:id="@+id/cl_up_stat"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="52dp"
-            android:background="@drawable/round_down_stat_bg"
-            android:contentDescription="@string/up_content_description"
             android:paddingVertical="@dimen/stat_card_padding_vertical"
+            android:layout_marginTop="@dimen/stat_top_margin"
+            android:background="@drawable/round_down_stat_bg"
             android:visibility="@{viewModel.connectionState == ConnectionState.CONNECTED ? View.VISIBLE: View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed">
@@ -44,53 +43,70 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:importantForAccessibility="no"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_up_traffic"
+                app:layout_constraintBottom_toBottomOf="@+id/ll_up_traffic"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/tv_up_label"
-                app:srcCompat="@drawable/ic_trend_up" />
+                app:layout_constraintTop_toTopOf="@+id/ll_up_traffic"
+                app:srcCompat="@drawable/ic_trend_up"
+                android:importantForAccessibility="no"
+                />
 
-            <TextView
-                android:id="@+id/tv_up_label"
-                style="@style/label_in_stats"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/up"
-                app:layout_constraintBottom_toTopOf="@+id/tv_up_traffic"
-                app:layout_constraintStart_toStartOf="@+id/tv_up_traffic"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="packed" />
-
-            <TextView
-                android:id="@+id/tv_up_traffic"
-                style="@style/stats_kbits_text"
+            <LinearLayout
+                android:id="@+id/ll_up_traffic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
+                android:paddingEnd="40dp"
                 android:layout_marginTop="4dp"
-                android:contentDescription="@{viewModel.dataUsageUpstream}"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="@{viewModel.dataUsageUpstream}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ic_up_traffic"
-                app:layout_constraintTop_toBottomOf="@+id/tv_up_label"
-                app:layout_constraintVertical_chainStyle="spread"
-                tools:text="2.12kbits" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_up_label"
+                    style="@style/label_in_stats"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/up"
+                    android:importantForAccessibility="no"/>
+
+                <TextView
+                    android:id="@+id/tv_up_traffic"
+                    style="@style/stats_kbits_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:text="@{viewModel.dataUsageUpstream}"
+                    android:contentDescription="@{viewModel.dataUsageUpstream}"
+                    tools:text="2.12kbits" />
+
+            </LinearLayout>
+
 
             <TextView
                 android:id="@+id/tv_up_traffic_delta"
                 style="@style/stats_kbits_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginEnd="24dp"
                 android:background="@drawable/bg_rounded_secondary"
                 android:text="@{viewModel.dataUsageDiffUpstream}"
-                app:layout_constraintStart_toEndOf="@+id/ic_up_traffic"
-                app:layout_constraintTop_toBottomOf="@+id/tv_up_traffic"
+                app:layout_constraintEnd_toEndOf="parent"
                 tools:text="2.12kbits" />
 
+            <androidx.constraintlayout.helper.widget.Flow
+                android:id="@+id/flow_up_traffic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:constraint_referenced_ids="ll_up_traffic,tv_up_traffic_delta"
+                app:flow_horizontalGap="40dp"
+                app:flow_horizontalStyle="spread_inside"
+                app:flow_wrapMode="chain"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/ic_up_traffic"
+                app:layout_constraintTop_toTopOf="parent"  />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -108,59 +124,74 @@
             app:layout_constraintTop_toBottomOf="@+id/cl_up_stat"
             app:layout_constraintVertical_chainStyle="packed">
 
-            <TextView
-                android:id="@+id/tv_down_traffic"
-                style="@style/stats_kbits_text"
+            <ImageView
+                android:id="@+id/ic_down_traffic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
+                app:layout_constraintBottom_toBottomOf="@+id/ll_down_traffic"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/ll_down_traffic"
+                app:srcCompat="@drawable/ic_trend_down"
+                android:importantForAccessibility="no"
+                />
+            <LinearLayout
+                android:id="@+id/ll_down_traffic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingEnd="40dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginTop="4dp"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:text="@{viewModel.dataUsageDownstream}"
-                android:contentDescription="@{viewModel.dataUsageDownstream}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ic_down_traffic"
-                app:layout_constraintTop_toBottomOf="@+id/tv_down_label"
-                tools:text="2.12kbits" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="spread"
+                android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/tv_down_label"
+                    style="@style/label_in_stats"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/down"
+                    android:importantForAccessibility="no"/>
+
+                <TextView
+                    android:id="@+id/tv_down_traffic"
+                    style="@style/stats_kbits_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:text="@{viewModel.dataUsageDownstream}"
+                    android:contentDescription="@{viewModel.dataUsageDownstream}"
+                    tools:text="2.12kbits" />
+
+            </LinearLayout>
             <TextView
                 android:id="@+id/tv_down_traffic_delta"
                 style="@style/stats_kbits_number"
                 android:background="@drawable/bg_rounded_tertiary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
                 android:text="@{viewModel.dataUsageDiffDownstream}"
-                app:layout_constraintTop_toBottomOf="@+id/tv_down_traffic"
-                app:layout_constraintStart_toEndOf="@+id/ic_down_traffic"
+                app:layout_constraintBottom_toBottomOf="@+id/ll_down_traffic"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/ll_down_traffic"
                 tools:text="2.12kbits" />
-
-            <ImageView
-                android:id="@+id/ic_down_traffic"
+            <androidx.constraintlayout.helper.widget.Flow
+                android:id="@+id/flow_down_traffic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_down_traffic"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/tv_down_label"
-                app:srcCompat="@drawable/ic_trend_down"
-                android:importantForAccessibility="no"
-                />
-
-            <TextView
-                android:id="@+id/tv_down_label"
-                style="@style/label_in_stats"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/down"
-                android:importantForAccessibility="no"
-                app:layout_constraintBottom_toTopOf="@+id/tv_down_traffic"
-                app:layout_constraintStart_toStartOf="@+id/tv_down_traffic"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="packed" />
-
+                app:constraint_referenced_ids="ll_down_traffic,tv_down_traffic_delta"
+                app:flow_horizontalGap="40dp"
+                app:flow_horizontalStyle="spread_inside"
+                app:flow_wrapMode="chain"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/ic_down_traffic"
+                app:layout_constraintTop_toTopOf="parent"  />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
