--- a/app/src/main/res/layout/fragment_generalsettings.xml
+++ b/app/src/main/res/layout/fragment_generalsettings.xml
@@ -36,7 +36,7 @@
                 style="@style/collapsing_toolbar_style"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
-                app:title="@string/general"
+                app:title="@string/app_icon"
                 app:toolbarId="@+id/toolbar">
 
                 <com.google.android.material.appbar.MaterialToolbar
@@ -84,6 +84,7 @@
                     android:text="@string/launcher_hint"
                     />
 
+                <!--TODO: Remove section-->
                 <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
