--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="surface_container_low">#32277F</color>
     <color name="on_surface">#FFFFFF</color>
     <color name="on_surface_variant">#CCCCFF</color>
+    <color name="sub_header_color">#C272FF</color>
     <color name="inverse_surface">#CCCCFF</color>
     <color name="inverse_on_surface">#181F2F</color>
     <color name="tertiary">#93CBF8</color>
