--- a/app/src/main/res/layout/fragment_app_routing.xml
+++ b/app/src/main/res/layout/fragment_app_routing.xml
@@ -28,24 +28,16 @@
             app:elevation="0dp"
             >
 
-            <com.google.android.material.appbar.CollapsingToolbarLayout
-                android:id="@+id/toolbar_layout"
-                style="@style/collapsing_toolbar_style"
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar"
+                app:navigationIcon="?attr/homeAsUpIndicator"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/surface"
+                app:menu="@menu/app_routing_menu"
                 app:title="@string/apps"
-                app:toolbarId="@+id/toolbar">
+                app:popupTheme="@style/Theme.TorVPN.PopupOverlay" />
 
-                <com.google.android.material.appbar.MaterialToolbar
-                    android:id="@+id/toolbar"
-                    app:navigationIcon="?attr/homeAsUpIndicator"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    app:layout_collapseMode="pin"
-                    app:menu="@menu/app_routing_menu"
-                    app:popupTheme="@style/Theme.TorVPN.PopupOverlay" />
-
-            </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.appcompat.widget.LinearLayoutCompat
