--- a/app/src/main/res/layout/view_circuits_per_app_expanded.xml
+++ b/app/src/main/res/layout/view_circuits_per_app_expanded.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_rounded"
+        android:background="@drawable/bg_rounded_outlined"
         android:padding="@dimen/default_padding"
         tools:showIn="@layout/fragment_app_detail">
 
@@ -21,22 +21,22 @@
             android:id="@+id/iv_hops_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@+id/tv_device"
+            app:layout_constraintTop_toTopOf="@+id/tv_app"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/tv_device"
+            app:layout_constraintBottom_toBottomOf="@id/tv_app"
             android:src="@drawable/ic_hops_top"
             android:importantForAccessibility="no"
             android:paddingHorizontal="@dimen/compact_padding"
             />
         <TextView
-            android:id="@+id/tv_device"
+            android:id="@+id/tv_app"
             android:textAppearance="@style/app_circuits_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:paddingEnd="@dimen/compact_padding"
             android:paddingRight="@dimen/compact_padding"
             android:paddingVertical="6dp"
-            android:text="@string/this_device"
+            tools:text="Firefox"
             app:layout_constraintStart_toEndOf="@+id/iv_hops_top"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +82,7 @@
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toEndOf="@+id/iv_country_flag_entry_node"
-            app:layout_constraintTop_toBottomOf="@+id/tv_device"
+            app:layout_constraintTop_toBottomOf="@+id/tv_app"
             app:layout_constraintWidth_default="wrap"
             tools:text="a long tkjhkjh sdlf" />
 
@@ -127,8 +127,8 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@+id/tv_app_exit"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_app_exit"
+            app:layout_constraintTop_toTopOf="@+id/tv_internet"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_internet"
             app:layout_constraintStart_toStartOf="parent"
             android:paddingHorizontal="@dimen/compact_padding"
             android:src="@drawable/ic_hops_bottom"
@@ -193,7 +193,7 @@
             />
 
         <TextView
-            android:id="@+id/tv_app_exit"
+            android:id="@+id/tv_internet"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:paddingVertical="6dp"
@@ -205,7 +205,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:textAppearance="@style/app_circuits_text"
-            tools:text="Firefox"
+            android:text="@string/the_internet"
             app:layout_constraintHorizontal_bias="0"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
