--- a/app/src/main/res/layout/include_guide_frame.xml
+++ b/app/src/main/res/layout/include_guide_frame.xml
@@ -147,8 +147,10 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="32dp"
-                android:layout_marginBottom="24dp"
+                android:paddingHorizontal="24dp"
+                android:paddingVertical="24dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
                 android:onClick="@{() -> viewModel.setGuideInvisible()}"
                 android:text="@string/guide_got_it"
                 android:textColor="@color/tertiary"
