Resolve "Use long press instead of tap to display clipboard menu"

--- a/app/src/main/res/layout/fragment_bridgelines.xml
+++ b/app/src/main/res/layout/fragment_bridgelines.xml
@@ -124,6 +124,7 @@
                             android:paddingBottom="@dimen/default_padding"
                             android:textColor="@color/on_surface"
                             android:textCursorDrawable="@drawable/edittext_cursor"
+                            android:minLines="10"
                             tools:text="obfs4blub" />
                     </androidx.appcompat.widget.LinearLayoutCompat>
                 </androidx.core.widget.NestedScrollView>
