chore: update bridges fragment

--- a/app/src/main/res/layout/bridge_request_entry_view.xml
+++ b/app/src/main/res/layout/bridge_request_entry_view.xml
@@ -7,8 +7,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:paddingVertical="@dimen/default_padding"
-        android:background="@drawable/bg_config_item"
-        >
+        android:background="@drawable/bg_config_item">
+
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivIcon"
             android:layout_width="32dp"
@@ -18,8 +18,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:visibility="visible"
-            />
+            tools:visibility="visible" />
+
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvTitle"
             style="@style/list_item_style_small"
@@ -35,8 +35,7 @@
             android:singleLine="true"
             android:ellipsize="end"
             tools:text="a long test that should not touch the divider letsee"
-            tools:textColor="#000000"
-            />
+            tools:textColor="#000000" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvSubtitle"
@@ -53,8 +52,17 @@
             android:maxLines="2"
             android:ellipsize="end"
             tools:text="a long test that should not touch the divider letsee"
-            tools:textColor="#000000"
-            />
+            tools:textColor="#000000" />
 
+        <ImageView
+            android:id="@+id/ivArrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:importantForAccessibility="no"
+            android:src="@drawable/ic_arrow_up_right"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="gone"
+            tools:visibility="visible" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
