fix quick start switch behavior and possible memory leak in ConfigureFragment

--- a/app/src/main/res/layout/fragment_configure.xml
+++ b/app/src/main/res/layout/fragment_configure.xml
@@ -81,6 +81,7 @@
                     app:hideDrawable="true"
                     app:hideSwitch="false"
                     app:secondaryText="@string/connect_automatically_description"
+                    app:checked="@{viewModel.startOnBoot}"
                     app:text="@string/connect_automatically" />
 
                 <org.torproject.vpn.ui.base.view.IconTextEntryView
