--- a/app/src/main/res/layout/app_switch_item_view.xml
+++ b/app/src/main/res/layout/app_switch_item_view.xml
@@ -14,8 +14,8 @@
             android:src="@drawable/ic_dummy_app"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent" />
+
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvTitle"
             style="@style/list_item_style"
@@ -26,13 +26,11 @@
             app:layout_constraintStart_toEndOf="@id/ivAppImage"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/divider"
+            app:layout_constraintEnd_toStartOf="@+id/ivCircuit"
             android:paddingHorizontal="@dimen/compact_padding"
             android:singleLine="true"
             android:ellipsize="end"
-            tools:text="a long test that should not touch the divider letsee"
-
-            />
+            tools:text="a long test that should not touch the divider letsee" />
 
         <ImageView
             android:id="@+id/ivCircuit"
@@ -55,8 +53,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:background="@color/outline"
             android:layout_marginHorizontal="@dimen/compact_padding"
-            android:paddingHorizontal="@dimen/compact_padding"
-            />
+            android:paddingHorizontal="@dimen/compact_padding" />
+
         <com.google.android.material.materialswitch.MaterialSwitch
             android:id="@+id/smItemSwitch"
             style="@style/toggle"
