--- a/app/src/main/res/layout/fragment_bridgelines.xml
+++ b/app/src/main/res/layout/fragment_bridgelines.xml
@@ -26,15 +26,14 @@
             android:theme="@style/Theme.TorVPN.AppBarOverlay"
             android:background="?attr/colorPrimary"
             app:liftOnScroll="false"
-            app:elevation="0dp"
-            >
+            app:elevation="0dp">
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 app:navigationIcon="@drawable/ic_x"
                 android:paddingEnd="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:title="@string/add_new_bridge"
+                app:title="@string/add_bridge"
                 app:menu="@menu/bridgelines_menu"
                 app:popupTheme="@style/Theme.TorVPN.PopupOverlay" />
         </com.google.android.material.appbar.AppBarLayout>
@@ -124,7 +123,6 @@
                             android:paddingBottom="@dimen/default_padding"
                             android:textColor="@color/on_surface"
                             android:textCursorDrawable="@drawable/edittext_cursor"
-                            android:minLines="10"
                             tools:text="obfs4blub" />
                     </androidx.appcompat.widget.LinearLayoutCompat>
                 </androidx.core.widget.NestedScrollView>
