--- a/app/src/main/res/layout-land/fragment_bridgelines.xml
+++ b/app/src/main/res/layout-land/fragment_bridgelines.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <import type="android.view.View"/>
@@ -26,15 +25,14 @@
             android:theme="@style/Theme.TorVPN.AppBarOverlay"
             android:background="?attr/colorPrimary"
             app:liftOnScroll="false"
-            app:elevation="0dp"
-            >
+            app:elevation="0dp">
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 app:navigationIcon="@drawable/ic_x"
                 android:paddingEnd="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:title="@string/add_new_bridge"
+                app:title="@string/add_bridge"
                 app:menu="@menu/bridgelines_menu"
                 app:popupTheme="@style/Theme.TorVPN.PopupOverlay" />
         </com.google.android.material.appbar.AppBarLayout>
@@ -53,8 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.8"
-                />
+                app:layout_constraintGuide_percent="0.8" />
             <TextView
                 android:id="@+id/tv_description"
                 style="@style/dialog_title_small"
@@ -77,8 +74,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_description"
                 app:layout_constraintBottom_toBottomOf="@+id/center_horizontal_guideline"
-                android:layout_marginHorizontal="16dp"
-                >
+                android:layout_marginHorizontal="16dp">
 
                 <androidx.core.widget.NestedScrollView
                     android:id="@+id/scrollViewContainer"
@@ -95,8 +91,7 @@
                     app:layout_constraintVertical_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    >
+                    app:layout_constraintBottom_toBottomOf="parent">
 
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="match_parent"
@@ -138,8 +133,7 @@
                     app:layout_constraintStart_toStartOf="@+id/scrollViewContainer"
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginHorizontal="@dimen/default_padding"
-                    android:paddingHorizontal="@dimen/compact_padding"
-                    />
+                    android:paddingHorizontal="@dimen/compact_padding" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -158,8 +152,7 @@
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintTop_toBottomOf="@id/cl_editText"
                 app:layout_constraintVertical_bias="0"
-                android:visibility="visible"
-                />
+                android:visibility="visible" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
