update: color scheme

--- a/app/src/main/res/drawable/bg_primary_round_btn.xml
+++ b/app/src/main/res/drawable/bg_primary_round_btn.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle">
 
             <corners android:radius="32dp" />
-            <solid android:color="@color/sub_header_color">
+            <solid android:color="@color/primary">
 
             </solid>
 
