--- a/app/src/main/res/layout-land/fragment_help.xml
+++ b/app/src/main/res/layout-land/fragment_help.xml
@@ -76,7 +76,7 @@
                             android:layout_height="wrap_content"
                             style="@style/list_item_style_medium"
                             android:layout_weight="1"
-                            android:text="@string/view_faq"
+                            android:text="@string/view_support_docs"
                             android:layout_gravity="center_vertical"
                             android:paddingHorizontal="@dimen/activity_horizontal_margin"
                             />
