open offline help from help menu entry, code clean up of prior implementation which offered (a hidden menu item) to open offline help from within configure menu

--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -69,7 +69,7 @@
                         android:clickable="true"
                         android:focusable="true"
                         android:paddingHorizontal="@dimen/activity_horizontal_margin"
-                        android:onClick="@{handler::onFAQClicked}"
+                        android:onClick="@{handler::onOfflineHelpClicked}"
                         >
                         <androidx.appcompat.widget.AppCompatImageView
                             android:layout_width="24dp"
