improve positioning of the vertical scroll bar and tweak CSS colors a bit.

--- a/app/src/main/assets/help/layout.css
+++ b/app/src/main/assets/help/layout.css
@@ -1,4 +1,11 @@
 body {
-  background-color: #1D0B41;
+  background-color: #160F43;
   color: #FFFFFF;
+  padding-right: 24px;
+  padding-left: 24px;
 }
+
+a {
+  color: #85BBF8;
+}
+
